changed index file

--- a/index.html
+++ b/index.html
@@ -2,36 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tshirt Website</title>
-
-    <!--bootstrap css-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
-
-    <!--styles css-->
-    <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title" charset="utf-8">
+    <title>Kymia</title>
   </head>
   <body>
-    <!--bootstrap js-->
-    <script type="text/javascript" src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" defer></script>
-    <!--jquery-->
-    <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous" defer></script>
-    <!--custom js script-->
-    <script type="text/javascript" src="js/script.js"></script>
-    <!--section-->
-    <section id="home_page">
-      <div class="women-section">
-        <a href="womenSection.html"><img src="Images/tshirt.jpg" id="women_bkg" alt="" /></a>
-        <div class="container">
-          <h2>Women</h2>
-        </div>
-      </div>
-      <div class="men-section">
-        <a href="menSection.html">  <img src="Images/tshirtw.jpg" id="men_bkg" alt="" /></a>
-        <!-- <div class="container">
-          <h2>Men</h2>
-        </div> -->
-      </div>
-
-    </section>
+    
   </body>
 </html>
