--- a/index.html
+++ b/index.html
@@ -17,14 +17,25 @@
     <div class="container main_coming_soon">
       <h1>Kymia</h1>
       <h3>Coming soon</h3>
-      <!-- <div class="row">
+       <div class="row">
         <p>
           Ever dreamt of wearing a unique design printed on high quality apparel?
         </p>
         <p>
           <span>Kymia</span> will be coming shortly with incredible designs that you'll totally love.
         </p>
-      </div> -->
+        <!--<form action="demo_form.asp">
+          Email: <input type="text" name="fname"><br>
+          <input type="submit" value="Submit">
+        </form>-->
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Email@Example.com" aria-describedby="basic-addon2">
+          <span class="input-group-addon" id="basic-addon2"></span>
+           <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+
+
+      </div>
     </div>
 
   </body>
