--- a/index.html
+++ b/index.html
@@ -5,37 +5,32 @@
     <title>Kymia</title>
     <!--bootstrap css-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
-
     <!--styles css-->
     <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="styles/comingsoon.css" media="screen" title="no title" charset="utf-8">
-
     <!-- font -->
 <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>  </head>
   <body>
     <!-- <img id="bkg_imge"src="Images/marble.jpg" alt="" /> -->
     <div class="container main_coming_soon">
       <h1>Kymia.</h1>
-       <div class="row">
+        <h3>Coming soon.</h3>
+       <div class="row info_txt">
         <p>
           Ever dreamt of wearing a unique design printed on high quality apparel?
         </p>
         <p>
           <span>Kymia</span> will be coming shortly with incredible designs that you'll totally love.
         </p>
-        <h3>Coming soon.</h3>
       </div>
       <!-- text field for email -->
       <div class="row email_row">
         <form role="form">
           <div class="form-group">
-            <label for="email">Email address:</label>
-            <input type="email" class="form-control" id="email">
+            <input type="email" class="form-control" id="email" placeholder="Email">
           </div>
         </form>
-        <button type="submit" class="btn btn-default">Submit</button>
       </div>
-
       <!-- end text field for email -->
     </div>
 
