--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       </div>
       <!-- text field for email -->
       <div class="row email_row">
-        <form role="form">
+        <form role="form" action="send.php" method="post">
           <div class="form-group">
-            <input type="email" class="form-control" id="email" placeholder="Email">
+            <input type="email" class="form-control" id="email" placeholder="Email"><br>
+            <input type="submit" name="submit" value="click">
           </div>
         </form>
       </div>
       <!-- end text field for email -->
     </div>
-
   </body>
 </html>
