--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <form role="form" action="send.php" method="post">
           <div class="form-group">
             <input type="email" class="form-control" id="email" placeholder="Email"><br>
-            <input type="submit" name="submit" value="click">
+            <input type="submit" class="btn" name="submit" value="Submit">
           </div>
         </form>
       </div>
