Angular JS included

--- a/mainpage.html
+++ b/mainpage.html
@@ -29,7 +29,7 @@
           <!-- end logo -->
           <!-- shop now  -->
           <div class="col-sm-5 col-xs-12" id="shop_now_women">
-            <a href="womenSection.html"><button type="button" class="shop_now_btn btn btn-default">Shop women</button></a>
+            <a href="shop.html"><button type="button" class="shop_now_btn btn btn-default">Shop women</button></a>
           </div>
           <!-- end shop now -->
           <!-- woman image -->
@@ -49,7 +49,7 @@
           </div>
             <!-- shop now  -->
             <div class="col-sm-5 col-xs-12" id="shop_now_men">
-              <a href="menSection.html"><button type="button" class="shop_now_btn shop_now_btn_men btn btn-default">Shop men</button></a>
+              <a href="shop.html"><button type="button" class="shop_now_btn shop_now_btn_men btn btn-default">Shop men</button></a>
             </div>
             <!-- end shop now -->
             <!-- man image -->
