--- a/shop.html
+++ b/shop.html
@@ -1,101 +1,100 @@
 <!doctype html>
 <html ng-app="kymiaShopApp">
-<?php
-	session_start() ;
-	$login = false ;
-	require_once('check_login.php') ;
-?>
-<head >
+<head>
     <meta charset="utf-8"/>
     <title>Shop</title>
-    <link rel="stylesheet" href="styles/shopstyles.css"/>
-    <link rel="stylesheet" href="styles/shopnav.css" >
+    <link rel="stylesheet" href="styles/shopnav.css">
+    <link rel="stylesheet" href="styles/shopstyles.css">
+    <!--bootstrap css-->
+    <link rel="stylesheet" href="styles/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
 </head>
 
-<body style="padding: 0 0;"  ng-controller="ShopCtrl">
-
-
-<!-- Navigation -->
-<nav>
-    <div class="container">
-        <ul class="navbar-left">
-            <li><a>Home</a></li>
-        </ul> <!--end navbar-left -->
-
-        <ul class="navbar-right">
-            <li><a href="#" id="cart"><i class="fa fa-shopping-cart"></i> Cart <span class="badge">{{cart.length}}</span></a></li>
-        </ul> <!--end navbar-right -->
-    </div> <!--end container -->
-</nav>
-<div class="container">
-    <div class="shopping-cart">
-        <div class="shopping-cart-header">
-            <i class="fa fa-shopping-cart cart-icon"></i><span class="badge"></span>
-            <div class="shopping-cart-total">
-                <span class="lighter-text">Total:</span>
-
-                <span class="main-color-text">{{getCartPrice()}}</span>
+<body  ng-controller="ShopCtrl">
+<nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="mainpage.html">Kymia.</a>
             </div>
-        </div> <!--end shopping-cart-header -->
 
-    </div> <!--end shopping-cart -->
-</div> <!--end container -->
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="nav-no-boder collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">shop<span class="sr-only">(current)</span></a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="mainpage.html">home</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Cart <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Action</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
 
-<div class="container">
-    <div ng-repeat ="product in products" >
-        <div class="col-sm-4" style="    margin: 10px 0;">
-            <div class="shop-card">
-                <div class="title">
-                    {{product.title}}
-                </div>
+    <div class="container shop_picker">
+        <div class="row picker_row">
+            <div class="col-md-3 picker_options">
+                <div class="inner">
+                    <p class="description">
+                        Fancy a design
+                    </p>
 
-                <div class="slider">
-                    <figure data-color="#E24938, #A30F22 ">
-                        <!--<img src="{{product.image}}" height="150" width="150"/>-->
-                    </figure>
                 </div>
-                <div class="cta">
-                    <div class="price">$ {{product.price}}</div>
-                    <button ng-click="addToCart(product);" class="btn">Add to cart<span class="bg"></span></button>
+            </div>
+            <div class="col-md-3 picker_options">
+                <div class="inner">
+                    <p class="description">
+                        How about a t-shirt?
+                    </p>
                 </div>
+                <form action="">
+                    <p>Color:</p>
+                    <div class="col-sm-6"><input type="radio" name="color" value="black"> Black<br></div>
+                    <div class="col-sm-6"><input type="radio" name="color" value="white"> White<br></div>
+                </form>
+                <form action="">
+                    <p>Size:</p>
+                    <div class="col-sm-6"><input type="radio" name="size" value="XS"> XS<br></div>
+                    <div class="col-sm-6"><input type="radio" name="size" value="S"> S<br></div>
+                    <div class="col-sm-6"><input type="radio" name="size" value="M"> M<br></div>
+                    <div class="col-sm-6"><input type="radio" name="size" value="L"> L<br></div>
+                </form>
+            </div>
+            <div class="col-md-3 picker_options">
+                <div class="inner">
+                    <p class="description">
+                        Where do you want
+                        <br>
+                        to place your design?
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-3 picker_options">
+                <div class="inner">
+                    <p class="description">
+                        Your unique t-shirt!!
+                    </p>
+                </div>
+                <input type="button" class="checkout" value="checkout">
+
             </div>
         </div>
     </div>
-</div>
 
-<div ng-if="cart.length" class="shopping-cart">
-    <h2>{{cart.length}} item(s) in cart, total:  {{getCartPrice()}}$</h2>
 
-			<span class="cart-item th radius" ng-repeat="product in cart">
-				<div class="row">
-					<div class="col-sm-6">
-							<img ng-src="{{product.image}}" height="150" width="150" title="{{product.title}}"/>
-					</div>
-					<div class="col-sm-4"><h3>{{product.title}}</h3></div>
-					<div class="col-sm-2">
-							<h4>{{product.price}}</h4>
-							<span class="badge" ng-show="product.quantity > 1">
-								x{{product.quantity}}
-							</span>
-					</div>
-			</div>
-			<hr>
-			</span>
-
-    <button class="btn" ng-click="checkout();">Checkout</button>
-
-</div>
+<!--Scripts-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<script type="text/javascript">$(document).ready(function(){
-    $(".shopping-cart").hide();
-    $("#cart").on("click", function() {
-        $(".shopping-cart").fadeToggle( "fast");
-    });
-
-});
-</script>
-
 
 <!-- Angular -->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.0/angular.min.js"></script>
@@ -105,11 +104,9 @@
 <!-- our code -->
 <script type="text/javascript" src="js/ui-bootstrap-tpls-1.2.5.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
-
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-cookies.min.js"></script>
-
-
 <script src="js/app.js"></script>
+<!--End Scripts-->
 
 </body>
 </html>
