--- a/shop.html
+++ b/shop.html
@@ -2,9 +2,9 @@
 <html ng-app="kymiaShopApp">
 <head>
     <meta charset="utf-8"/>
-    <title>Shop</title>
+    <title>Kymia [Shop]</title>
     <!--bootstrap css-->
-    <link rel="stylesheet" href="styles/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="bootstrap-3.3.6-dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
 
     <link rel="stylesheet" href="styles/shopnav.css">
     <link rel="stylesheet" href="styles/shopstyles.css">
@@ -28,13 +28,14 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="nav-no-boder collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">shop<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="#">Shop<span class="sr-only">(current)</span></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="mainpage.html">home</a></li>
+                <li><a href="mainpage.html">Home</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Cart <span class="caret"></span></a>
+                    <a href="#" class="cart-class dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false"><span class="glyphicon glyphicon-shopping-cart"></span> Cart
+                        <span class=""></span><label class="hidden-xs" id="cart-count">1</label></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                     </ul>
@@ -48,18 +49,26 @@
 
 <div class="container shop_picker">
     <div class="row picker_row">
-        <div class="col-md-3 picker_options">
+
+
+        <div class="col-xs-12 col-md-3 picker_options">
             <div class="inner">
                 <p class="description">
                     {{currentDesign.name}}
                 </p>
             </div>
-            <button class="btn btn-default pull-left" ng-click="designPrevious()"><</button>
-            <button class="btn btn-default pull-right" ng-click="designNext()">></button>
+            <div class="col-xs-6">
+                <button class="btn btn-block btn-default pull-left" ng-click="designPrevious()"><</button>
+            </div>
+            <div class="col-xs-6">
+                <button class="btn btn-block btn-default pull-right" ng-click="designNext()">></button>
+            </div>
         </div>
-        <div class="col-md-3 picker_options">
-            <div class="inner">
-                <p>Color: {{currentColor.value}}</p>
+
+
+        <div class="col-xs-12 col-md-3 picker_options">
+            <div class="">
+                <p>T-shirt color: {{currentColor.value}}</p>
 
                 <div class="btn-group" data-toggle="buttons">
                     <label style="background-color: #212121" class="btn btn-default custom-radio-color active"
@@ -72,9 +81,7 @@
                     </label>
                 </div>
                 <br><br>
-
-                <p>Size: {{currentSize.size}}</p>
-
+                <p>T-shirt size: {{currentSize.size}}</p>
                 <div class="btn-group" data-toggle="buttons">
                     <label class="btn btn-default custom-radio-size active" ng-click="sizeXS()">XS
                         <input type="radio" checked autocomplete="off">
@@ -91,59 +98,92 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3 picker_options">
+
+
+        <div class="col-xs-12 col-md-3 picker_options">
             <div class="inner">
                 <p class="description">
                     {{currentShirt.type}}
                 </p>
             </div>
-            <button class="btn btn-default pull-left" ng-click="shirtPrevious()"><</button>
-            <button class="btn btn-default pull-right" ng-click="shirtNext()">></button>
+            <div class="col-xs-6">
+                <button class="btn btn-block btn-default pull-left" ng-click="shirtPrevious()"><</button>
+            </div>
+            <div class="col-xs-6">
+                <button class="btn btn-block btn-default pull-right" ng-click="shirtNext()">></button>
+            </div>
         </div>
-        <div class="col-md-3 picker_options">
+
+
+        <div class="col-xs-12 col-md-3 picker_options">
             <div class="inner">
-                <p class="description">
-                    {{currentPlacement.name}}
+                <p class="description" ng-if="currentShirt.id == 1">
+                    {{currentPlacement.image[1]}}
+                </p>
+                <p class="description" ng-if="currentShirt.id == 2">
+                    {{currentPlacement.image[2]}}
                 </p>
             </div>
-            <button class="btn btn-default pull-left" ng-click="placementPrevious()"><</button>
-            <button class="btn btn-default pull-right" ng-click="placementNext()">></button>
+            <div class="col-xs-6">
+                <button class="btn btn-block btn-default pull-left" ng-click="placementPrevious()"><</button>
+            </div>
+            <div class="col-xs-6">
+                <button class="btn btn-block btn-default pull-right" ng-click="placementNext()">></button>
+            </div>
         </div>
     </div>
+
 
     <!-- Preview -->
     <div class="row picker_row">
-        <div class="col-md-4 col-md-offset-4 picker_options">
+        <div class="col-xs-12 col-md-4 col-md-offset-4 picker_options">
             <div class="inner">
                 <p class="description">
-                    PREVIEW THE "ALL TOGETHER" UNIQUE SHIRT
+                    {{preview.design.name}} <br>
+                    {{preview.color.value}} <br>
+                    {{preview.size.size}} <br>
+                    {{preview.shirt.type}} <br>
+
+                <p class="description" ng-if="currentShirt.id == 1">
+                    {{preview.placement.image[1]}}
+                </p>
+                <p class="description" ng-if="currentShirt.id == 2">
+                    {{preview.placement.image[2]}}
+                </p>
+
+                <br><br>
+
                 </p>
             </div>
-            <input type="button" class="checkout" value="Add to car?">
-
-            <input type="button" class="checkout" value="checkout">
+            <button style="margin-top: 25px;" class="btn btn-default btn-block" ng-click="checkout()">Checkout</button>
+            <div class="row">
+                <div class="col-xs-12">
+                    <h3>Price: {{preview.design.price + preview.placement.price | currency:'€'}}</h3>
+                </div>
+            </div>
         </div>
     </div>
+</div>
 
-    <!--Scripts-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<!--Scripts-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script type="text/javascript" src="bootstrap-3.3.6-dist/js/bootstrap.js"></script>
 
-    <!-- Angular -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.0/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.0/angular-animate.min.js"></script>
-    <script type="text/javascript"
-            src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-route.js"></script>
+<!-- Angular -->
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.0/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.0/angular-animate.min.js"></script>
+<script type="text/javascript"
+        src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-route.js"></script>
 
-    <!-- our code -->
-    <script type="text/javascript" src="js/ui-bootstrap-tpls-1.2.5.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-cookies.min.js"></script>
+<!-- our code -->
+<script type="text/javascript" src="js/ui-bootstrap-tpls-1.2.5.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-cookies.min.js"></script>
 
-    <script src="angular/app.js"></script>
-    <script src="angular/factory.js"></script>
-    <script src="angular/controller-shop.js"></script>
-    <!--End Scripts-->
+<script src="angular/app.js"></script>
+<script src="angular/factory.js"></script>
+<script src="angular/controller-shop.js"></script>
+<!--End Scripts-->
 
 </body>
 </html>
