Working on the images..Still wrong...

--- a/shop.html
+++ b/shop.html
@@ -136,27 +136,34 @@
 
     <!-- Preview -->
     <div class="row picker_row">
-        <div class="col-xs-12 col-md-4 col-md-offset-4 picker_options">
+        <div class="col-xs-12 col-md-3 col-md-offset-6 picker_options">
             <div class="inner">
-                <p class="description">
-                    {{preview.design.name}} <br>
-                    {{preview.color.value}} <br>
-                    {{preview.size.size}} <br>
-                    {{preview.shirt.type}} <br>
+                <img style="height: 90%; width: 90%; display: block;" class="img-responsive" src="{{currentPreview}}" alt="">
+                <!-- -->
+                <!-- -->
+                <!-- -->
+                <!-- -->
+                <!-- -->
+                <!--<p class="description">-->
+                    <!--<img  ng-if="currentShirt.id == 1" class="img-responsive" src="{{preview.placement.image[1]}}" alt="">-->
+                    <!--{{preview.design.name}} <br>-->
+                    <!--{{preview.color.value}} <br>-->
+                    <!--{{preview.size.size}} <br>-->
+                    <!--{{preview.shirt.type}} <br>-->
 
-                <!--<p class="description" >-->
-                    <!--{{preview.placement.image[1]}}-->
+                <!--&lt;!&ndash;<p class="description" >&ndash;&gt;-->
+                    <!--&lt;!&ndash;{{preview.placement.image[1]}}&ndash;&gt;-->
+                <!--&lt;!&ndash;</p>&ndash;&gt;-->
+
+                <!--<img  ng-if="currentShirt.id == 1" class="img-responsive" src="{{preview.placement.image[1]}}" alt="">-->
+                <!--&lt;!&ndash;<p class="description" ng-if="currentShirt.id == 2">&ndash;&gt;-->
+                    <!--&lt;!&ndash;{{preview.placement.image[2]}}&ndash;&gt;-->
+                <!--&lt;!&ndash;</p>&ndash;&gt;-->
+                <!--<img   ng-if="currentShirt.id == 2" class="img-responsive"  src="{{preview.placement.image[2]}}" alt="">-->
+
+                <!--<br><br>-->
+
                 <!--</p>-->
-
-                <img  ng-if="currentShirt.id == 1" class="img-responsive" src="{{preview.placement.image[1]}}" alt="">
-                <!--<p class="description" ng-if="currentShirt.id == 2">-->
-                    <!--{{preview.placement.image[2]}}-->
-                <!--</p>-->
-                <img   ng-if="currentShirt.id == 2" class="img-responsive"  src="{{preview.placement.image[2]}}" alt="">
-
-                <br><br>
-
-                </p>
             </div>
             <button style="margin-top: 25px;" class="btn btn-default btn-block" ng-click="checkout()">Checkout</button>
             <div class="row">
