--- a/shop.html
+++ b/shop.html
@@ -2,7 +2,8 @@
 <html ng-app="kymiaShopApp">
 <head>
     <meta charset="utf-8"/>
-    <title>Kymia [Shop]</title>
+    <base href="/">
+    <title>Kymia. [Shop]</title>
     <!--bootstrap css-->
     <link rel="stylesheet" href="bootstrap-3.3.6-dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
 
@@ -22,23 +23,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="mainpage.html">Kymia.</a>
+            <a href="" class="navbar-brand" ng-click="home()">Kymia.</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="nav-no-boder collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Shop<span class="sr-only">(current)</span></a></li>
+                <li class=""><a href="" ng-click="shop()">Shop<span class="sr-only"></span></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="mainpage.html">Home</a></li>
+                <li><a href="" ng-click="home()">Home</a></li>
                 <li class="dropdown">
                     <a href="#" class="cart-class dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false"><span class="glyphicon glyphicon-shopping-cart"></span> Cart
-                        <span class=""></span><label class="hidden-xs" id="cart-count">1</label></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                    </ul>
+                        <span class=""></span><label class="hidden-xs" id="cart-count"></label></a>
                 </li>
             </ul>
         </div>
@@ -49,21 +47,6 @@
 
 <div class="container shop_picker">
     <div class="row picker_row">
-
-
-        <div class="col-xs-12 col-md-3 picker_options">
-            <div class="inner">
-                <p class="description">
-                    <img class="img-responsive" ng-src = "{{currentDesign.image}}" alt="">
-                </p>
-            </div>
-            <div class="col-xs-6">
-                <button class="btn btn-block btn-default pull-left" ng-click="designPrevious()"><</button>
-            </div>
-            <div class="col-xs-6">
-                <button class="btn btn-block btn-default pull-right" ng-click="designNext()">></button>
-            </div>
-        </div>
 
 
         <div class="col-xs-12 col-md-3 picker_options">
@@ -103,7 +86,22 @@
         <div class="col-xs-12 col-md-3 picker_options">
             <div class="inner">
                 <p class="description">
-                    <img style="height: 90%; width: 90%; display: block;" class="img-responsive" ng-src = "{{currentShirt.image}}" alt="">
+                    <img class="img-responsive" ng-src = "{{currentDesign.image}}" alt="">
+                </p>
+            </div>
+            <div class="col-xs-6">
+                <button class="btn btn-block btn-default pull-left" ng-click="designPrevious()"><</button>
+            </div>
+            <div class="col-xs-6">
+                <button class="btn btn-block btn-default pull-right" ng-click="designNext()">></button>
+            </div>
+        </div>
+
+
+        <div class="col-xs-12 col-md-3 picker_options">
+            <div class="inner">
+                <p class="description">
+                    <img style="height: 90%; width: 90%; display: inline-block;" class="img-responsive" ng-src = "{{currentShirt.image}}" alt="">
                 </p>
             </div>
             <div class="col-xs-6">
@@ -118,10 +116,10 @@
         <div class="col-xs-12 col-md-3 picker_options">
             <div class="inner">
                 <p class="description" ng-if="currentShirt.id == 1">
-                    <img style="height: 90%; width: 90%; display: block;" class="img-responsive" ng-src = "{{currentPlacement.image[1]}}" alt="">
+                    <img style="height: 90%; width: 90%; display: inline-block;" class="img-responsive" ng-src = "{{currentPlacement.image[1]}}" alt="">
                 </p>
                 <p class="description" ng-if="currentShirt.id == 2">
-                    <img style="height: 90%; width: 90%; display: block;" class="img-responsive" ng-src = "{{currentPlacement.image[2]}}" alt="">
+                    <img style="height: 90%; width: 90%; display: inline-block;" class="img-responsive" ng-src = "{{currentPlacement.image[2]}}" alt="">
                 </p>
             </div>
             <div class="col-xs-6">
@@ -138,12 +136,15 @@
     <div class="row picker_row">
         <div class="col-xs-12 col-md-4 col-md-offset-4 picker_options">
             <div class="inner">
-                <img style="height: 90%; width: 75%; display: block;" class="img-responsive" ng-src="{{currentPreview}}" alt="">
+                <img style="max-height: 90%; max-width: 75%; display: inline-block; vertical-align: middle;" class="img-responsive" ng-src="{{currentPreview}}" alt="">
             </div>
-            <button style="margin-top: 25px;" class="btn btn-default btn-block" ng-click="checkout()">Checkout</button>
             <div class="row">
                 <div class="col-xs-12">
                     <h3>Price: {{preview.design.price + preview.placement.price | currency:'€'}}</h3>
+                </div>
+                <div class="col-xs-12">
+                    <button style="margin-top: 25px;" class="btn btn-default btn-block" ng-click="checkout()"><span class="glyphicon glyphicon-shopping-cart"></span>
+                        <span>&nbsp&nbsp Add to cart</span></button>
                 </div>
             </div>
         </div>
