--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <input placeholder="what's your email address"type="email" class="form-control" id="email">
           </div>
         </form>
-        <button type="submit" class="btn btn-default">Sign Up</button>
+        <button type="submit" class="btn btn-default"> <a href="mainpage.html" style="text-decoration: none;"> Sign Up</button>
       </div>
 
       <!-- end text field for email -->
